build/log/idf_py_stdout_output_38188
[1/11] Performing build step for 'bootloader'
[1/1] cd /Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/build/bootloader/esp-idf/esptool_py && /Users/saket/.espressif/python_env/idf5.1_py3.10_env/bin/python /Users/saket/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/build/bootloader/bootloader.bin
Bootloader binary size 0x57a0 bytes. 0x2860 bytes (32%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cc.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cc.obj 
/Users/saket/.espressif/tools/xtensa-esp32s3-elf/esp-12.2.0_20230208/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.1.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/build/config -I/Users/saket/esp/esp-idf/components/newlib/platform_include -I/Users/saket/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/saket/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/saket/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/Users/saket/esp/esp-idf/components/freertos/esp_additions/include -I/Users/saket/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/Users/saket/esp/esp-idf/components/esp_hw_support/include -I/Users/saket/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/saket/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/saket/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/saket/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/Users/saket/esp/esp-idf/components/heap/include -I/Users/saket/esp/esp-idf/components/log/include -I/Users/saket/esp/esp-idf/components/soc/include -I/Users/saket/esp/esp-idf/components/soc/esp32s3 -I/Users/saket/esp/esp-idf/components/soc/esp32s3/include -I/Users/saket/esp/esp-idf/components/hal/esp32s3/include -I/Users/saket/esp/esp-idf/components/hal/include -I/Users/saket/esp/esp-idf/components/hal/platform_port/include -I/Users/saket/esp/esp-idf/components/esp_rom/include -I/Users/saket/esp/esp-idf/components/esp_rom/include/esp32s3 -I/Users/saket/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/saket/esp/esp-idf/components/esp_common/include -I/Users/saket/esp/esp-idf/components/esp_system/include -I/Users/saket/esp/esp-idf/components/esp_system/port/soc -I/Users/saket/esp/esp-idf/components/esp_system/port/include/private -I/Users/saket/esp/esp-idf/components/xtensa/include -I/Users/saket/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/saket/esp/esp-idf/components/esp_timer/include -I/Users/saket/esp/esp-idf/components/lwip/include -I/Users/saket/esp/esp-idf/components/lwip/include/apps -I/Users/saket/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/saket/esp/esp-idf/components/lwip/lwip/src/include -I/Users/saket/esp/esp-idf/components/lwip/port/include -I/Users/saket/esp/esp-idf/components/lwip/port/freertos/include -I/Users/saket/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/saket/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/saket/esp/esp-idf/components/console -I/Users/saket/esp/esp-idf/components/vfs/include -I/Users/saket/esp/esp-idf/components/spi_flash/include -I/Users/saket/esp/esp-idf/components/esp_wifi/include -I/Users/saket/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/saket/esp/esp-idf/components/esp_event/include -I/Users/saket/esp/esp-idf/components/esp_phy/include -I/Users/saket/esp/esp-idf/components/esp_phy/esp32s3/include -I/Users/saket/esp/esp-idf/components/esp_netif/include -I/Users/saket/esp/esp-idf/components/esp_http_server/include -I/Users/saket/esp/esp-idf/components/http_parser -I/Users/saket/esp/esp-idf/components/nvs_flash/include -I/Users/saket/esp/esp-idf/components/esp_partition/include -I/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro -I/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/third_party/gemmlowp -I/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/third_party/flatbuffers/include -I/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/third_party/ruy -I/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/third_party/kissfft -I/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/signal/micro/kernels -I/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/signal/src -I/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/signal/src/kiss_fft_wrappers -I/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/components/espressif__esp32-camera/driver/include -I/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/components/espressif__esp32-camera/conversions/include -I/Users/saket/esp/esp-idf/components/driver/include -I/Users/saket/esp/esp-idf/components/driver/deprecated -I/Users/saket/esp/esp-idf/components/driver/analog_comparator/include -I/Users/saket/esp/esp-idf/components/driver/dac/include -I/Users/saket/esp/esp-idf/components/driver/gpio/include -I/Users/saket/esp/esp-idf/components/driver/gptimer/include -I/Users/saket/esp/esp-idf/components/driver/i2c/include -I/Users/saket/esp/esp-idf/components/driver/i2s/include -I/Users/saket/esp/esp-idf/components/driver/ledc/include -I/Users/saket/esp/esp-idf/components/driver/mcpwm/include -I/Users/saket/esp/esp-idf/components/driver/parlio/include -I/Users/saket/esp/esp-idf/components/driver/pcnt/include -I/Users/saket/esp/esp-idf/components/driver/rmt/include -I/Users/saket/esp/esp-idf/components/driver/sdio_slave/include -I/Users/saket/esp/esp-idf/components/driver/sdmmc/include -I/Users/saket/esp/esp-idf/components/driver/sigma_delta/include -I/Users/saket/esp/esp-idf/components/driver/spi/include -I/Users/saket/esp/esp-idf/components/driver/temperature_sensor/include -I/Users/saket/esp/esp-idf/components/driver/touch_sensor/include -I/Users/saket/esp/esp-idf/components/driver/twai/include -I/Users/saket/esp/esp-idf/components/driver/uart/include -I/Users/saket/esp/esp-idf/components/driver/usb_serial_jtag/include -I/Users/saket/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/saket/esp/esp-idf/components/esp_pm/include -I/Users/saket/esp/esp-idf/components/esp_ringbuf/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection=. -fmacro-prefix-map=/Users/saket/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu++2b -fno-exceptions -fno-rtti -DTF_LITE_STATIC_MEMORY -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cc.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.cc.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cc.obj -c /Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/main/main.cc
/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/main/main.cc:31:14: error: redefinition of 'camera_fb_t* fbimg'
   31 | camera_fb_t* fbimg;
      |              ^~~~~
In file included from /Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/main/main.cc:25:
/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/main/shared_img.h:7:14: note: 'camera_fb_t* fbimg' previously declared here
    7 | camera_fb_t* fbimg;  // Declaration of the shared variable
      |              ^~~~~
/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/main/main.cc: In function 'void test()':
/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/main/main.cc:46:18: warning: unused variable 'fbimg' [-Wunused-variable]
   46 |     camera_fb_t* fbimg = esp_camera_fb_get();
      |                  ^~~~~
[5/11] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/image_provider.cc.obj
In file included from /Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/main/image_provider.cc:23:
/Users/saket/esp/esp-idf/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/main/image_provider.cc: In function 'TfLiteStatus GetImage(int, int, int, int8_t*)':
/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/main/image_provider.cc:150:18: warning: unused variable 'last_frame' [-Wunused-variable]
  150 |   static int64_t last_frame = 0;
      |                  ^~~~~~~~~~
/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/main/image_provider.cc: At global scope:
/Users/saket/devlopment/v3-FOMO+CLASSIFICATION-working/esp-tflite-micro/examples/person_detection/main/image_provider.cc:150:18: warning: 'last_frame' defined but not used [-Wunused-variable]
ninja: build stopped: subcommand failed.
